tests/lean/change_tac_fail.lean.expected.out
change_tac_fail.lean:10:48: error: type mismatch at application
  t ++ a
term
  a
has type
  T
but is expected to have type
  list T
